test/fails/bad_functions/arguments6.lgl
int f(vec2 x, vec3 y) {
    return 0;
}

void main() {
    print f([1., 2., 3.], [1., 2.]);
    return;
}